[build-system]
requires = [
  "cmake>=3.20",
  "nanobind",
  "ninja",
  "pybind11",
  "scikit-build-core",
  "wheel"
]

build-backend = "scikit_build_core.build"

[project]
name = "llvm-wheel"
version = "0.1.0"
description = "LLVM / MLIR runtime packaged as a Python wheel"
requires-python = ">=3.8"

[tool.scikit-build]
wheel.install-dir = "llvm_wheel"
wheel.packages = ["mlir"]

cmake.source-dir = "."
build-dir = "build/cm_build_scikit"
build.verbose = true
cmake.args = [
  "-DLLVM_ENABLE_PROJECTS=mlir;llvm;lld",
  "-DLLVM_TARGETS_TO_BUILD=host;NVPTX;AMDGPU",
  "-DCMAKE_BUILD_TYPE=Release",
  "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
  "-DCMAKE_C_COMPILER=clang",
  "-DCMAKE_CXX_COMPILER=clang++",
  "-DLLVM_ENABLE_LLD=ON",
  "-DMLIR_ENABLE_BINDINGS_PYTHON=ON"
]
